<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/calculator"
        android:textColor="#2196F3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#374955"
        android:onClick="zero"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/grey"
        android:onClick="period"
        android:text="@string/dot"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/calcBlue"
        android:onClick="equals"
        android:text="@string/equals"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="one"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="two"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="three"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="add"
        android:text="@string/sum"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="four"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="five"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="six"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button12" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="subtract"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="seven"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="eight"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/grey"
        android:insetBottom="0dp"
        android:onClick="nine"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button16" />

    <Button
        android:id="@+id/button16"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="multiply"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="backspace"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toEndOf="@+id/button17" />

    <Button
        android:id="@+id/button19"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="percentage"
        android:text="@string/percentage"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button20" />

    <Button
        android:id="@+id/button20"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/calcBlue"
        android:insetBottom="0dp"
        android:onClick="divide"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResultDisplay"
        android:layout_width="398dp"
        android:layout_height="102dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="4dp"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewHistoryDisplay"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/history"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultDisplay"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>